namcap (2.x)
	- don't be restrictive in filenames rule
	- fix non-working emptydirs rule
	- the test suite can now be used for tarball rules

namcap (2.8)
	- compatibility with changes in local DB format introduced by
	  pacman 3.5
	- New check for inexistent backup files
	- New check for cross-directory hard links (FS#20314)
	- New check for filenames with non-ASCII or non-printable
	  characters (FS#20758)
	- New check for kdebase-runtime dependency for KDE programs
	  (FS#15110)
        - introduce a basic test suite
	- Correct handling of versioned provides (version is now ignored)
        - Correct checksum checking to detect non-hexadecimal digits

namcap (2.7)
	- parsepkgbuild: ensure return codes don't leak that aren't failures;
	  actually check return code of script inside namcap
	- Improved $startdir detection (braces and quotes)
	- Improved script dependency detection
	- Better handling of files marked unreadable inside package
	- Be [multilib] friendly- allow use of /usr/lib32
	- Use DBPath defined inside pacman.conf
	- Check for packages that could be 'any' architecture
	- Initial steps toward Python 3 compatibility

namcap (2.6)
	- Add new 'anyelf' rule; should catch ELF files that end up in 'any'
	  arch packages and cannot be arch-independent
	- Allow checking of all checksum types (FS#17168)
	- Code style and import cleanups
	- Handle optdepends descriptions correctly (FS#18259)
	- Make it an error to use $startdir in PKGBUILDs

namcap (2.5)
    - Turn namcap into a wrapper script that handles the compression;
      this allows us to use XZ-compressed packages without Python support
    - New warning- packages over 50% docs
    - Fix up rpath module a bit; ensure more paths are seen as valid
    - Improve checking for tarfiles; don't assume .pkg.tar.gz ending
    - Allow static libraries to have 644 or 444 permissions

namcap (2.4)
    - Added some vim modelines
    - Small fixes in mimefiles
    - Check for tags and version consistency